# aws-lambda

./: .bumpversion.cfg  .gitignore  LICENSE  README.rst  pyproject.toml
pd_aws_lambda/: dispatcher.py
pd_aws_lambda/cli/: build.py  deploy.py  exceptions.py  helpers.py  main.py  run.py
pd_aws_lambda/handlers/: django.py  exec.py  logger.py  shell.py  wsgi.py
pd_aws_lambda/scripts/: exceptions.py  helpers.py  pd_build.py  pd_build_and_deploy.py  pd_deploy.py  pd_run.py
