[tool.poetry]
name = "pd_aws_lambda"
version = "2.0.0"
description = "Integrate your python applications with AWS Lambda and https://pythondeploy.co/."
authors = ["Federico Jaramillo Martínez <federicojaramillom@gmail.com>"]
license= "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/pythondeploy/aws-lambda"

[tool.poetry.dependencies]
python = "^3.7"
apig-wsgi = ">=2.0.0"

[tool.poetry.dev-dependencies]
black = "*"
bump2version = "*"
docutils = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
flake8-fixme = "*"
flake8-unused-arguments = "*"
isort = "*"
pygments = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
